infra/frontro/blazn-test/networkpolicy-api-data-egress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-data-egress-dev
  namespace: blazn-test
spec:
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.0.105/32
  - ports:
    - port: 9000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: objectstore
  podSelector:
    matchLabels:
      app: blazn-api-dev
  policyTypes:
  - Egress
